--- a/styles/styles.css
+++ b/styles/styles.css
@@ -685,8 +685,18 @@ margin-right: 207px;
 }
 
 .filter-menu .button {
-  width: 56px;
-  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 48px;
+  height: 48px;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+}
+
+.filter-menu .button-current {
+  border: 2px solid #000000;
+  border-radius: 4px;
 }
 
 .filter-menu-title {
