--- a/styles/styles.css
+++ b/styles/styles.css
@@ -401,8 +401,31 @@ body {
   margin-bottom: 46px;
 }
 
+.button {
+  display: inline-block;
+  font-size: 20px;
+  line-height: 36px;
+  font-weight: 700;
+  text-align: center;
+  color: #ffffff;
+  border: none;
+  text-decoration: none;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
 .appointment-form-email {
   display: flex;
+  margin: 0 auto;
+  flex-grow: 1;
+}
+
+.button-appointment {
+  width: 200px;
+  height: 60px;
+  background: #82B3D3;
+  border-radius: 0 10px 10px 0;
+  padding: 12px 15px;
 }
 
 .inner-header {
