--- a/styles/styles.css
+++ b/styles/styles.css
@@ -711,7 +711,7 @@ margin-right: 207px;
   list-style-type: none;
   margin: 0 auto;
   padding: 0;
-  grid-template-columns: 340px 340px 340px;
+  grid-template-columns: repeat(3, 1fr);
   gap: 18px;
   margin-bottom: 96px;
 }
