--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,6 +64,18 @@ body {
   background-repeat: no-repeat;
 }
 
+.container-logo:after {
+  content: '';
+  background: url("../images/vector.svg");
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: translate(-90px,-69px)
+}
+
 .page-container {
   display: flex;
   flex-direction: column;
