--- a/styles/styles.css
+++ b/styles/styles.css
@@ -154,6 +154,28 @@ body {
   text-decoration: none;
 }
 
+.navigation-link:hover {
+  background-color: #68A2CA;
+  color: #FFFFFF;
+  border: 1px solid #82B3D3;
+  border-radius: 4px;
+}
+
+.navigation-link:focus  {
+  background-color: #68A2CA;
+  color: #FFFFFF;
+  border: 1px solid #82B3D3;
+  border-radius: 4px;
+}
+
+.navigation-link:hover .navigation-icon {
+  fill: #FFFFFF;
+}
+
+.navigation-link:focus .navigation-icon {
+  fill: #FFFFFF;
+}
+
 .navigation-user .navigation-item:nth-child(1) .navigation-link {
   margin: 0;
   padding: 24px 12px;
