--- a/styles/styles.css
+++ b/styles/styles.css
@@ -515,11 +515,16 @@ body {
 }
 
 .inner-header-title {
+  margin: 0;
+  padding: 0;
+
   font-weight: 700;
   font-size: 60px;
   line-height: 78px;
   text-transform: uppercase;
-  margin-left: 70px;
+  padding-top: 35px;
+  padding-left: 70px;
+  margin-bottom: 10px;
 }
 
 .breadcrumbs {
