--- a/styles/styles.css
+++ b/styles/styles.css
@@ -547,7 +547,6 @@ body {
 .inner-header-title {
   margin: 0;
   padding: 0;
-
   font-weight: 700;
   font-size: 60px;
   line-height: 78px;
@@ -594,27 +593,6 @@ body {
   border: 2px solid #E5E5E5;
   border-radius: 4px;
 }
-
-/*
-.button-current {
-  border: 2px solid #E5E5E5;
-}
-
-.button-light:hover {
-  border: 2px solid;
-  fill: #000000;
-}
-
-.button-light:active {
-  border: 2px solid;
-  fill: #000000;
-}
-
-.button-light:focus {
-  border: 2px solid;
-  fill: #68A2CA;
-}
-*/
 
 .product-card-title {
   font-weight: 700;
@@ -962,8 +940,20 @@ margin-right: 207px;
 }
 
 .filter-menu .button-current {
-  border: 2px solid #000000;
-  border-radius: 4px;
+  border-color: #000000;
+}
+
+.button-light:hover {
+  border-color: #000000;
+}
+
+.button-light:active {
+  border-color: #000000;
+}
+
+.button-light:focus,
+.button-current:focus {
+  border-color: rgba(104, 162, 202, 1);
 }
 
 .filter-menu-title {
