--- a/styles/styles.css
+++ b/styles/styles.css
@@ -865,6 +865,14 @@ body {
   color: #FFFFFF;
 }
 
+.catalog-filter-type {
+  margin: 0;
+  margin-right: 70px;
+  padding: 0;
+  width: 125px;
+  border: 0;
+}
+
 .catalog-filter-title {
   margin: 0;
   padding: 0;
@@ -875,18 +883,17 @@ body {
   margin-bottom: 34px;
 }
 
+.catalog-filter-list {
+  margin: 0;
+  padding: 0;
+}
+
 .catalog-filter-infrastructure {
-  width: 150.43px;
+  width: 151px;
   margin: 0;
   padding: 0;
   margin-right: 70px;
   margin-left: 70px;
-  border: 0;
-}
-
-.catalog-filter-type {
-  width: 125px;
-  margin-right: 176px;
   border: 0;
 }
 
@@ -1068,6 +1075,12 @@ margin-right: 207px;
   border-radius: 4px;
 }
 
+.catalog-filter-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
 .catalog-filter-price {
   margin: 0;
   padding: 0;
@@ -1155,4 +1168,64 @@ margin-right: 207px;
 .toggle-max {
   top: -8px;
   right: -9px;
+}
+
+.control {
+  position: relative;
+  display: block;
+  padding-left: 39px;
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+.control-mark {
+  position: absolute;
+  left: -1px;
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
+  background: #FFFFFF;
+}
+
+.control:hover .control-mark {
+  background: rgba(255, 255, 255, 0.6);
+}
+
+.control:active .control-mark {
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.control:focus .control-mark {
+  background: rgba(255, 255, 255, 0.6);
+  border: 3px solid #83B3D3;
+}
+
+.control-input:disabled + .control-mark {
+  border-color: #242424;
+}
+
+.control-input[type="checkbox"]:checked + .control-mark::after {
+  position: absolute;
+  top: 5px;
+  left: 4px;
+  width: 12px;
+  height: 10px;
+  background-image: url("../images/check-mark.svg");;
+  content: "";
+  color: transparent;
+}
+
+.control-input[type="radio"] + .control-mark {
+  border-radius: 50%;
+}
+
+.control-input[type="radio"]:checked + .control-mark::before {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 10px;
+  height: 10px;
+  background-color: #3F5E72;;
+  border-radius: 50%;
+  content: "";
 }
