--- a/styles/styles.css
+++ b/styles/styles.css
@@ -888,6 +888,10 @@ body {
   padding: 0;
 }
 
+.catalog-filter-item:not(:last-child) {
+  margin-bottom: 15px;
+}
+
 .catalog-filter-infrastructure {
   width: 151px;
   margin: 0;
