--- a/styles/styles.css
+++ b/styles/styles.css
@@ -914,9 +914,33 @@ body {
 .button-catalog {
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   margin-right: 70px;
   margin-left: 70px;
   padding: 0;
+  padding-bottom: 71px;
+}
+
+.button-apply {
+  margin: 0;
+  padding: 14px 15px;
+  margin-bottom: 20px;
+  font-size: 16px;
+  line-height: 21px;
+  background: #82B3D3;
+  border-radius: 4px;
+  min-width: 160px;
+  min-height: 48px;
+}
+
+.button-off {
+  margin: 0;
+  padding: 0;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: capitalize;
+  background-color: transparent;
 }
 
 .filter-menu {
