задает состояние для селектора сортировки

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -997,6 +997,20 @@ body {
   appearance: none;
 }
 
+.select-control:hover,
+.select-control:focus {
+  border-color: rgba(104, 162, 202, 1);
+}
+
+.select-control:active {
+  border-color: rgba(63, 94, 114, 1);
+}
+
+.select-control:disabled {
+  border-color: rgba(0, 0, 0, 0.3);
+  color: rgba(0, 0, 0, 0.3);
+}
+
 .filter-menu .button {
   display: flex;
   align-items: center;
