--- a/styles/styles.css
+++ b/styles/styles.css
@@ -954,8 +954,14 @@ body {
   background-color: transparent;
 }
 
+.button-off:hover,
 .button-off:active {
   color: rgba(255, 255, 255, 0.3);
+}
+
+.button-off:focus {
+  border: 3px solid #83B3D3;
+  border-radius: 4px;
 }
 
 .filter-menu {
@@ -963,13 +969,6 @@ body {
   align-items: center;
   margin: 55px 71px 57px 72px;
 
-}
-
-.sorting-container {
-  display: flex;
-  justify-content: center;
-
-  padding-left: 71px;
 }
 
 .select {
@@ -1122,6 +1121,30 @@ body {
 
 .filter-pagination-title {
   margin-right: 71px;
+}
+
+.pagination-select {
+  position: relative;
+  display: flex;
+  margin-right: auto;
+  align-items: center;
+  width: 160px;
+}
+
+.pagination-select-control {
+  width: 100%;
+  padding: 14px 20px;
+  padding-right: 48px;
+  background-color: #FFFFFF;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+  cursor: pointer;
+  font: inherit;
+  background-image: url("../images/down-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: right 21px center;
+  appearance: none;
+
 }
 
 .pagination-link {
