--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,8 +72,8 @@ body {
   display: block;
   position: absolute;
   width: 100%;
-  height: 100%;
-  transform: translate(-90px,-69px)
+  height: 100px;
+  transform: translate(-70px,-69px)
 }
 
 .page-container {
