--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,6 +59,7 @@ body {
 }
 
 .container-logo {
+  position: relative;
   background-image: url("../images/index-background.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
@@ -72,8 +73,8 @@ body {
   display: block;
   position: absolute;
   width: 100%;
-  height: 100px;
-  transform: translate(-70px,-69px)
+  height: 59px;
+  bottom: 0;
 }
 
 .page-container {
